force-app/main/default/objects/Candidate_Skill__c/Candidate_Skill__c.object-meta.xml
<CustomObject>
    <label>Candidate Skill</label>
    <nameField>
        <label>Candidate Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>