force-app/main/default/objects/Candidate_Skill__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Candidate Skills</relationshipLabel>
    <relationshipName>Candidate_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>