force-app/main/default/objects/Candidate_Skill__c/fields/Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Proficiency__c</fullName>
    <label>Proficiency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Unknown Level</fullName>
            </value>
            <value>
                <fullName>1 - Poor</fullName>
            </value>
            <value>
                <fullName>2 - Average</fullName>
            </value>
            <value>
                <fullName>3 - Decent</fullName>
            </value>
            <value>
                <fullName>4 - Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>