force-app/main/default/objects/Candidate_Skill__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Candidate Skills</relationshipLabel>
    <relationshipName>Candidate_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>