force-app/main/default/objects/Candidate_Skill__c/fields/Project_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Role</label>
    <referenceTo>Project_Role__c</referenceTo>
    <relationshipLabel>Candidate Skills</relationshipLabel>
    <relationshipName>Candidate_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>