force-app/main/default/objects/Candidate_Skill__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Candidate Skills</relationshipLabel>
    <relationshipName>Candidate_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>