force-app/main/default/objects/Candidate_Skill__c/fields/Speciality__c.field-meta.xml
<CustomField>
    <fullName>Speciality__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will determine their Tech Stack Specialty</description>
    <label>Speciality</label>
    <type>Checkbox</type>
</CustomField>