force-app/main/default/objects/Candidate_Skill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Years_Experience__c</columns>
    <columns>Role__c</columns>
    <columns>Speciality__c</columns>
    <columns>Proficiency__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Project_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>